# supwngo

./: .gitignore  .implementation_state  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  setup.py  supwngo.py  test_all_binaries.py
autopwn/: __init__.py  cli.py
autopwn/analysis/: __init__.py  dynamic.py  protections.py  static.py
autopwn/core/: __init__.py  binary.py  context.py  database.py
autopwn/exploit/: __init__.py  bypass.py  generator.py  primitives.py  shellcode.py
autopwn/fuzzing/: __init__.py  afl.py  crash_triage.py  honggfuzz.py  libfuzzer.py
autopwn/payloads/: __init__.py  loader.py
autopwn/remote/: __init__.py  interaction.py  leak.py  libc_db.py
autopwn/symbolic/: __init__.py  angr_engine.py  constraint.py  driller.py  path_finder.py
autopwn/utils/: __init__.py  config.py  helpers.py  logging.py
autopwn/vulns/: __init__.py  detector.py  format_string.py  heap.py  integer.py  stack_bof.py
docs/.obsidian/: workspace.json
docs/internal/: DEVELOPMENT.md  MANUAL_EXPLOITATION_GUIDE.md
docs/reference/: FUNCTION_REFERENCE.md  MODERN_EXPLOITATION_TECHNIQUES_2023-2025.md  WRITEUP_CAPABILITY_ASSESSMENT.md
docs/roadmaps/: CUTTING_EDGE_ROADMAP.md  IMPLEMENTATION_PLAN_V2.md  QUICK_WINS.md
scripts/: auto_implement.sh  setup_cron.sh  test_accuracy.py
supwngo/: __init__.py  cli.py
supwngo/ai/: __init__.py  advisor.py  llm_analyzer.py  pattern_learner.py  vuln_predictor.py
supwngo/analysis/: __init__.py  addresses.py  cfg.py  dataflow.py  decompile.py  diff.py  dynamic.py  imports.py  one_gadget.py  patch_diff.py  protections.py  source.py  static.py  strings.py
supwngo/api/: __init__.py  models.py  server.py
supwngo/containers/: __init__.py  detection.py  escapes.py
supwngo/core/: __init__.py  binary.py  context.py  database.py
supwngo/data/: .gitkeep
supwngo/distributed/: __init__.py  coordinator.py  coverage_merge.py  seed_sharing.py  worker.py
supwngo/embedded/: __init__.py  arm_exploit.py  firmware.py  mips_exploit.py
supwngo/exploit/: __init__.py  auto.py  auto_leak.py  brop.py  bypass.py  canary_bypass.py  chainer.py  constrained_shellcode.py  enhanced_auto.py  format_string.py  fsop.py  generator.py  got_plt.py  ld_preload.py  libc_auto.py  offset_finder.py  payload_synthesis.py  pie_bypass.py  primitives.py  reliability.py  restricted_shellcode.py  seccomp.py  seccomp_advanced.py  shellcode.py  signal_handler.py  strategy.py  templates.py  tester.py  verification.py  verify.py
supwngo/fuzzing/: __init__.py  afl.py  cmplog.py  crash_triage.py  grammar.py  honggfuzz.py  libfuzzer.py  snapshot.py
supwngo/kernel/: __init__.py  cross_cache.py  io_uring.py  krop.py  modprobe.py  module.py  msg_msg.py  pipe_buffer.py  ret2usr.py  slab.py  symbols.py  templates.py
supwngo/macos/: __init__.py  mach_binary.py
supwngo/payloads/: __init__.py  loader.py
supwngo/remote/: __init__.py  interaction.py  leak.py  libc_db.py
supwngo/reporting/: __init__.py  cvss.py  generator.py  sarif.py  templates.py
supwngo/symbolic/: __init__.py  angr_engine.py  constraint.py  driller.py  path_finder.py  (+1 more)
tests/: __init__.py  test_bypass_modules.py  test_challenges.py  test_core.py  test_heap_modules.py  test_kernel_modules.py  test_new_features.py  test_new_features_integration.py  test_new_modules.py  test_phase_modules.py  test_rop_modules.py
(+57 files in other folders)
